Bug 41335 - HTML5 tree builder shouldn't ASSERT on HTML5lib test suite
Summary: HTML5 tree builder shouldn't ASSERT on HTML5lib test suite
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Adam Barth
URL:
Keywords:
Depends on:
Blocks: 41123
  Show dependency treegraph
 
Reported: 2010-06-28 23:40 PDT by Adam Barth
Modified: 2010-06-28 23:54 PDT (History)
1 user (show)

See Also:


Attachments
Patch (11.65 KB, patch)
2010-06-28 23:42 PDT, Adam Barth
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Barth 2010-06-28 23:40:48 PDT
HTML5 tree builder shouldn't ASSERT on HTML5lib test suite
Comment 1 Adam Barth 2010-06-28 23:42:22 PDT
Created attachment 59992 [details]
Patch
Comment 2 Eric Seidel (no email) 2010-06-28 23:44:59 PDT
Comment on attachment 59992 [details]
Patch

OK.
Comment 3 Adam Barth 2010-06-28 23:48:16 PDT
Comment on attachment 59992 [details]
Patch

Clearing flags on attachment: 59992

Committed r62090: <http://trac.webkit.org/changeset/62090>
Comment 4 Adam Barth 2010-06-28 23:48:21 PDT
All reviewed patches have been landed.  Closing bug.