2010-06-28  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        HTML5 tree builder shouldn't ASSERT on HTML5lib test suite
        https://bugs.webkit.org/show_bug.cgi?id=41335

        Sketch out the EndTag handling for InBodyMode.

        * html/HTMLTreeBuilder.cpp:
        (WebCore::HTMLTreeBuilder::processEndTag):
        * html/HTMLTreeBuilder.h:
        (WebCore::HTMLTreeBuilder::ElementStack::inScope):
        (WebCore::HTMLTreeBuilder::clearActiveFormatingElementsUpToLastMarker):
        (WebCore::HTMLTreeBuilder::generateImpliedEndTags):
2010-06-28  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        HTML5 tree builder shouldn't ASSERT on HTML5lib test suite
        https://bugs.webkit.org/show_bug.cgi?id=41335

        Enable the remainder of the test suite and update expectations.

        * html5lib/webkit-runner-expected-html5.txt:
        * html5lib/webkit-runner-expected.txt:
        * html5lib/webkit-runner.html:


Canonical link: https://commits.webkit.org/53048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62090 268f45cc-cd09-0410-ab3c-d52691b4dbfc